cmake_minimum_required(VERSION 3.10)
project(networking VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(FetchContent)

# # Fetch SFML
# FetchContent_Declare(SFML
#     GIT_REPOSITORY https://github.com/SFML/SFML.git
#     GIT_TAG 2.6.x
#     GIT_SHALLOW ON SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFML/")
# FetchContent_MakeAvailable(SFML)


FetchContent_Declare(SFML SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/SFML/")
FetchContent_MakeAvailable(SFML)




add_executable(main src/main.cpp)

target_link_libraries(main PRIVATE sfml-network sfml-graphics sfml-window sfml-system)

target_compile_features(main PRIVATE cxx_std_11)

if(WIN32)
    add_custom_command(
        TARGET main
        COMMENT "Copy OpenAL DLL"
        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
        VERBATIM)
endif()





